# Team-NovaChrono-AI

./: .gitignore  LICENSE  main.py  pyproject.toml
equipe_agentes/: agente_agenda.py  agente_financeiro.py  agente_gmail.py  agente_hack_news.py  agente_orquestrador.py  main.py  prompt.py
ferramentas/: adicionar_gasto.py  consultar_gasto.py
interface_telegram/: bot_telegram.py
